==> Alecton4/stm32-weather-station/applications/bsp_ov7725.c <==
#include "bsp_ov7725.h"
#include "bsp_ov7725_sccb.h"
#include "bsp_lcd_ili9341.h"
#include "key_embedded.h"
#include "led_embedded.h"

static void FIFO_GPIO_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/*开启时钟*/

	__HAL_RCC_GPIOA_CLK_ENABLE();
	__HAL_RCC_GPIOC_CLK_ENABLE();
	__HAL_RCC_GPIOD_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();

	/*(FIFO_OE--FIFO输出使能)*/
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Pin = OV7725_OE_GPIO_PIN;
	HAL_GPIO_Init(OV7725_OE_GPIO_PORT, &GPIO_InitStructure);

	/*(FIFO_WRST--FIFO写复位)*/
	GPIO_InitStructure.Pin = OV7725_WRST_GPIO_PIN;
	HAL_GPIO_Init(OV7725_WRST_GPIO_PORT, &GPIO_InitStructure);

	/*(FIFO_RRST--FIFO读复位) */
	GPIO_InitStructure.Pin = OV7725_RRST_GPIO_PIN;
	HAL_GPIO_Init(OV7725_RRST_GPIO_PORT, &GPIO_InitStructure);

	/*(FIFO_RCLK-FIFO读时钟)*/
	GPIO_InitStructure.Pin = OV7725_RCLK_GPIO_PIN;
	HAL_GPIO_Init(OV7725_RCLK_GPIO_PORT, &GPIO_InitStructure);

	/*(FIFO_WE--FIFO写使能)*/
	GPIO_InitStructure.Pin = OV7725_WE_GPIO_PIN;
	HAL_GPIO_Init(OV7725_WE_GPIO_PORT, &GPIO_InitStructure);

	/*(FIFO_DATA--FIFO输出数据)*/
	GPIO_InitStructure.Pin = OV7725_DATA_0_GPIO_PIN | OV7725_DATA_1_GPIO_PIN | OV7725_DATA_2_GPIO_PIN |
				 OV7725_DATA_3_GPIO_PIN | OV7725_DATA_4_GPIO_PIN | OV7725_DATA_5_GPIO_PIN |
				 OV7725_DATA_6_GPIO_PIN | OV7725_DATA_7_GPIO_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(OV7725_DATA_GPIO_PORT, &GPIO_InitStructure);

	FIFO_OE_L(); /*拉低使FIFO输出使能*/
	FIFO_WE_H(); /*拉高使FIFO写允许*/
}

static void VSYNC_GPIO_Config(void)
{
	// GPIO_InitTypeDef GPIO_InitStructure;
	// /*初始化时钟，注意中断要开AFIO*/
	// __HAL_RCC_AFIO_CLK_ENABLE();
	// __HAL_RCC_GPIOC_CLK_ENABLE();

	// /*初始化引脚*/
	// GPIO_InitStructure.Pin = OV7725_VSYNC_GPIO_PIN;
	// GPIO_InitStructure.Mode = GPIO_MODE_IT_RISING;
	// GPIO_InitStructure.Pull = GPIO_NOPULL;
	// GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	// HAL_GPIO_Init(OV7725_VSYNC_GPIO_PORT, &GPIO_InitStructure);

	// HAL_NVIC_SetPriority(OV7725_VSYNC_EXTI_IRQ, 0, 3);
	// HAL_NVIC_EnableIRQ(OV7725_VSYNC_EXTI_IRQ);

	/* 按键0引脚为输入模式 */
	rt_pin_mode(OV7725_VSYNC_PIN, PIN_MODE_INPUT);
	/* 绑定中断，下降沿模式 */
	rt_pin_attach_irq(OV7725_VSYNC_PIN, PIN_IRQ_MODE_RISING, my_ov7725_interrupt, RT_NULL);
	/* 使能中断 */
	rt_pin_irq_enable(OV7725_VSYNC_PIN, PIN_IRQ_ENABLE);
}
